--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,7 @@
-flet[all]
-requests
-langchain
-langchain-core
-langchain[groq]
-
-flet[all]==0.21.0
-requests==2.31.0
-langchain==0.1.14
-langchain-core==0.1.34
-langchain[groq]==0.1.14
-groq==0.5.0
+flet[all]==0.25.2
+requests==2.32.3
+langchain==0.3.20
+langchain-core==0.3.43
+langchain[groq]==0.2.5
+langchain-groq == 0.2.5
+groq==0.18.0
